yaml.practice/svc.yaml
apiVersion: v1
kind: Service
metadata:  
 - name: laptop-svc
spec:
   ports: 
    - port: 80
      targetPort: 80
      protocol: TCP
   selector: 
      app: laptop
